--- a/config/.test.env.example
+++ b/config/.test.env.example
@@ -1,19 +1,22 @@
 # Application mode (LOCAL, TEST, PROD, DEV)
 CONFIG__MODE=TEST
 
+# Common project settings
+CONFIG__PROJECT__NAME=FASTAPI-APP
+
 # API settings
-CONFIG__API__PORT=8000
+CONFIG__API__PORT=17009
 
 # Database settings
 CONFIG__DB__HOST=localhost
-CONFIG__DB__PORT=5432
+CONFIG__DB__PORT=17019
 CONFIG__DB__USER=postgres
 CONFIG__DB__PASSWORD=postgres
-CONFIG__DB__NAME=my_database
+CONFIG__DB__NAME=postgres
 
 # Redis settings
 CONFIG__REDIS__HOST=localhost
-CONFIG__REDIS__PORT=6379
+CONFIG__REDIS__PORT=17029
 
 # Logs settings
 CONFIG__LOGS__DIR_PATH=./logs
