--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11.9"
 dependencies = [
     "alembic==1.17.0",
-    "asgi-lifespan>=2.1.0",
+    "asgi-lifespan==2.1.0",
     "asyncpg==0.30.0",
     "fastapi-cache2==0.2.2",
     "fastapi[standard]==0.119.0",
