--- a/docker/docker-compose-ci.yml
+++ b/docker/docker-compose-ci.yml
@@ -1,16 +1,16 @@
 services:
-  UNSET__CONFIG__PROJECT__NAME:
-    container_name: ${UNSET__CONFIG__PROJECT__NAME}
-    image: ${UNSET__CONFIG__PROJECT__NAME}-image:latest
+  UNSET.PROJECT.NAME:
+    container_name: ${UNSET.PROJECT.NAME}
+    image: ${UNSET.PROJECT.NAME}-image:latest
     restart: unless-stopped
     networks:
-      - ${UNSET__CONFIG__PROJECT__NAME}-network
+      - ${UNSET.PROJECT.NAME}-network
     volumes:
-      - /var/log/${UNSET__CONFIG__PROJECT__NAME}/:/app/logs/
+      - /var/log/${UNSET.PROJECT.NAME}/:/app/logs/
 
 networks:
-  UNSET__CONFIG__PROJECT__NAME-network:
+  UNSET.PROJECT.NAME-network:
     external: True
 
 volumes:
-  UNSET__CONFIG__PROJECT__NAME-pgdata:
+  UNSET.PROJECT.NAME-pgdata:
