--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,18 +1,18 @@
 services:
-  UNSET__CONFIG__PROJECT__NAME:
-    container_name: UNSET__CONFIG__PROJECT__NAME
+  UNSET.PROJECT.NAME:
+    container_name: UNSET.PROJECT.NAME
     restart: unless-stopped
     build:
       context: ..
       dockerfile: docker/Dockerfile
     networks:
-      - UNSET__CONFIG__PROJECT__NAME-network
+      - UNSET.PROJECT.NAME-network
     volumes:
-      - /var/log/UNSET__CONFIG__PROJECT__NAME/:/app/logs/
+      - /var/log/UNSET.PROJECT.NAME/:/app/logs/
 
 networks:
-  UNSET__CONFIG__PROJECT__NAME-network:
+  UNSET.PROJECT.NAME-network:
     external: True
 
 volumes:
-  UNSET__CONFIG__PROJECT__NAME-pgdata:
+  UNSET.PROJECT.NAME-pgdata:
