--- a/config/.env.dist
+++ b/config/.env.dist
@@ -9,6 +9,7 @@ PROJECT.NAME=app
 
 # API settings
 API.PORT=17000
+API.WORKERS=1
 
 # Database settings
 DB.HOST=localhost
@@ -20,6 +21,7 @@ DB.NAME=postgres
 # Redis settings
 REDIS.HOST=localhost
 REDIS.PORT=17020
+REDIS.PASSWORD=redis
 
 # Logs settings
 LOGS.DIR_PATH=./logs
