--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,13 @@ dependencies = [
     "redis==6.4.0",
     "sqlalchemy==2.0.44",
     "black==25.9.0",
-    "coverage==7.10.7",
+    "coverage==7.11.0",
     "mypy==1.18.2",
     "pre-commit==4.3.0",
     "pytest==8.4.2",
     "pytest-asyncio==1.2.0",
     "ruff==0.14.0",
+    "click==8.3.0",
 ]
 
 # --- Ruff
