--- a/config/.env.dist
+++ b/config/.env.dist
@@ -5,34 +5,41 @@ MODE=PROD
 SERVICE=API_V1
 
 # Common project settings
-PROJECT.NAME=app
+PROJECT__NAME=app
 
 # API settings
-API.PORT=17000
-API.WORKERS=1
+API__PORT=17000
+API__WORKERS=1
 
 # Database settings
-DB.HOST=localhost
-DB.PORT=17010
-DB.USER=postgres
-DB.PASSWORD=postgres
-DB.NAME=postgres
+# Docker
+DB__HOST=postgres
+DB__PORT=5432
+DB__USER=postgres
+DB__PASSWORD=postgres
+DB__NAME=postgres
+# Local
+#DB__HOST=localhost
+#DB__PORT=17001
+#DB__USER=postgres
+#DB__PASSWORD=postgres
+#DB__NAME=postgres
 
 # Redis settings
-REDIS.HOST=localhost
-REDIS.PORT=17020
-REDIS.PASSWORD=redis
+REDIS__HOST=localhost
+REDIS__PORT=17020
+REDIS__PASSWORD=redis
 
 # Logs settings
-LOGS.DIR_PATH=./logs
-LOGS.MAX_LOG_FILES=10
+LOGS__DIR_PATH=./logs
+LOGS__MAX_LOG_FILES=10
 
 # Security settings
-SECURITY.HASH_KEY=supersecret_hash_key
-SECURITY.ENCRYPT_KEY=supersecret_encrypt_key
+SECURITY__HASH_KEY=supersecret_hash_key
+SECURITY__ENCRYPT_KEY=supersecret_encrypt_key
 
 # Proxy settings
-PROXY.HOST=proxy.example.com
-PROXY.PORT=1080
-PROXY.USER=proxyuser
-PROXY.PASSWORD=proxypass
+PROXY__HOST=proxy__example__com
+PROXY__PORT=1080
+PROXY__USER=proxyuser
+PROXY__PASSWORD=proxypass
