--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,18 +1,24 @@
+x-common-args: &common-args
+  API__PORT: ${API__PORT}
+  PROJECT__NAME: ${PROJECT__NAME}
+
 services:
-  UNSET.PROJECT.NAME:
-    container_name: UNSET.PROJECT.NAME
+  backend:
+    container_name: ${PROJECT__NAME}-backend
     restart: unless-stopped
     build:
       context: ..
       dockerfile: docker/Dockerfile
     networks:
-      - UNSET.PROJECT.NAME-network
+      - ${PROJECT__NAME}-network
     volumes:
-      - /var/log/UNSET.PROJECT.NAME/:/app/logs/
+      - /var/log/${PROJECT__NAME}/:/app/logs/
+    ports:
+      - "${API__PORT}:${API__PORT}"
 
 networks:
-  UNSET.PROJECT.NAME-network:
+  UNSET__PROJECT__NAME-network:
     external: True
 
 volumes:
-  UNSET.PROJECT.NAME-pgdata:
+  UNSET__PROJECT__NAME-pgdata:
