--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ strict_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 
-exclude = "(?x)(venv | legacy | build)"
+exclude = "(?x)(.venv | venv | legacy | build)"
 
 plugins = [
     "pydantic.mypy",
