--- a/config/.env.dist
+++ b/config/.env.dist
@@ -33,6 +33,7 @@ REDIS__PASSWORD=redis
 # Logs settings
 LOGS__DIR_PATH=./logs
 LOGS__MAX_LOG_FILES=10
+LOGS__LEVEL=INFO
 
 # Security settings
 SECURITY__HASH_KEY=supersecret_hash_key
